--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,39 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+img {
+  width: 40px;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin-bottom: 10px;
+  display: flex;
+}
+
+li>span {
+  margin-left: 10px;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.name {
+  margin-left: 10px;
+  font-size: 35px;
+  font-weight: 700;
+}
+
+.data {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.data>span {
+  font-size: 20px;
+  font-weight: 500;
+}
