--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,3 +54,11 @@ li>span {
   font-size: 20px;
   font-weight: 500;
 }
+
+.country-border {
+  border: #212121 2px solid;
+  border-radius: 10px;
+  display: inline-block;
+  /* width: 500px; */
+  padding: 10px;
+}
